# AlignCrop3DSlicerExtension

./: CMakeLists.txt
AlignCrop3DSlicerModule/: AlignCrop3DSlicerModule.py  CMakeLists.txt
AlignCrop3DSlicerModule/AlignCrop3DSlicerModule/: AlignCrop3DSlicerModule.py
